force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Partner_Relation_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Disable_Partner_Relation_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SAL26-219</description>
    <label>Disable Partner Relation Validation Rule</label>
    <type>Checkbox</type>
</CustomField>