force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_PartnerRegRequest_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_PartnerRegRequest_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable PartnerRegRequest Triggers</description>
    <inlineHelpText>Disable PartnerRegRequest Triggers</inlineHelpText>
    <label>Disable PartnerRegRequest Triggers</label>
    <type>Checkbox</type>
</CustomField>