force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_PO_Stage_Error_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_PO_Stage_Error_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable PO Stage Error Flows</label>
    <type>Checkbox</type>
</CustomField>