force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_POC_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_POC_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable POC Validation Rules</description>
    <inlineHelpText>Disable POC Validation Rules</inlineHelpText>
    <label>Disable POC Validation Rules</label>
    <type>Checkbox</type>
</CustomField>