force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Product_Change_Req_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Product_Change_Req_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Product Change Req. Trigger</label>
    <type>Checkbox</type>
</CustomField>