force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Product_Option_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Product_Option_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This switch is used to disable flows for product option object</description>
    <label>Disable Product Option Flows</label>
    <type>Checkbox</type>
</CustomField>