force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_PS_Task_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_PS_Task_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable PS_Task Triggers</label>
    <type>Checkbox</type>
</CustomField>