force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Quotable_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quotable_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Quotable Validation</label>
    <type>Checkbox</type>
</CustomField>