force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Quote_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quote_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Quote Email Alerts</description>
    <inlineHelpText>Disable Quote Email Alerts</inlineHelpText>
    <label>Disable Quote Email Alerts</label>
    <type>Checkbox</type>
</CustomField>