force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Replacement_Framework__c.field-meta.xml
<CustomField>
    <fullName>Disable_Replacement_Framework__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FY25SR - This field is a bypass for entire Replacement Framework built for FY25 Summer Release</description>
    <inlineHelpText>FY25SR - This field is a bypass for entire Replacement Framework built for FY25 Summer Release</inlineHelpText>
    <label>Disable Replacement Framework</label>
    <type>Checkbox</type>
</CustomField>