force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Restriction_on_SKU_Fields_Edit__c.field-meta.xml
<CustomField>
    <fullName>Disable_Restriction_on_SKU_Fields_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Restriction on SKU Fields Edit</label>
    <type>Checkbox</type>
</CustomField>