force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Sales_Lead_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Sales_Lead_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Sales Lead Custom Object</description>
    <label>Disable Sales Lead Flows</label>
    <type>Checkbox</type>
</CustomField>