force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_SBQQ_Quote_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_SBQQ_Quote_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SBQQ Quote Flows</label>
    <type>Checkbox</type>
</CustomField>