force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_SBQQ_Quote_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_SBQQ_Quote_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable SBQQ Quote Triggers</description>
    <label>Disable SBQQ Quote Triggers</label>
    <type>Checkbox</type>
</CustomField>