force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_SBQQ_Quote_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_SBQQ_Quote_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable SBQQ Quote Validation Rules</description>
    <inlineHelpText>Disable SBQQ Quote Validation Rules</inlineHelpText>
    <label>Disable SBQQ Quote Validation Rules</label>
    <type>Checkbox</type>
</CustomField>