force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_SBQQ_QuoteLine_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_SBQQ_QuoteLine_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable SBQQ QuoteLine Validation Rules</description>
    <inlineHelpText>Disable SBQQ QuoteLine Validation Rules</inlineHelpText>
    <label>Disable SBQQ QuoteLine Validation Rules</label>
    <type>Checkbox</type>
</CustomField>