force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Scale_Utility_Overage_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Scale_Utility_Overage_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Scale Utility Overage Triggers</label>
    <type>Checkbox</type>
</CustomField>