force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_ServiceContract_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_ServiceContract_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ServiceContract Flows</label>
    <type>Checkbox</type>
</CustomField>