force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_ServiceContract_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ServiceContract_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To deactivate the service contract trigger</description>
    <label>Disable ServiceContract Trigger</label>
    <type>Checkbox</type>
</CustomField>