force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Shipment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Disable_Shipment_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Shipment Detail</label>
    <type>Checkbox</type>
</CustomField>