force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Specialist_Request_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Specialist_Request_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable Special Request object&apos;s flows.</description>
    <label>Disable Specialist Request Flows</label>
    <type>Checkbox</type>
</CustomField>