force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Stage_PO_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Stage_PO_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Stage PO Flows</label>
    <type>Checkbox</type>
</CustomField>