force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_StagePO_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_StagePO_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable stage po trigger</description>
    <label>Disable StagePO Trigger</label>
    <type>Checkbox</type>
</CustomField>