force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Support_Forums_Order_flow__c.field-meta.xml
<CustomField>
    <fullName>Disable_Support_Forums_Order_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Support Forums Order flow</label>
    <type>Checkbox</type>
</CustomField>