force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Task_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Task_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Task Triggers</description>
    <inlineHelpText>Disable Task Triggers</inlineHelpText>
    <label>Disable Task Triggers</label>
    <type>Checkbox</type>
</CustomField>