force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Territory_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Territory_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Disable territory trigger</description>
    <label>Disable Territory Triggers</label>
    <type>Checkbox</type>
</CustomField>