force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_UpgradeSource_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_UpgradeSource_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable UpgradeSource Trigger</label>
    <type>Checkbox</type>
</CustomField>