force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_US_Citizen_Entitlement_Check__c.field-meta.xml
<CustomField>
    <fullName>Disable_US_Citizen_Entitlement_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable US Citizen Active Entitlement validation</description>
    <label>Disable US Citizen Entitlement Check</label>
    <type>Checkbox</type>
</CustomField>