force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_User_Territory_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_User_Territory_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable User Territory Trigger</label>
    <type>Checkbox</type>
</CustomField>