force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Validations_on_SMS_UI__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validations_on_SMS_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FY25SR - This bypasses all validations present on SMS UI - Replacements and Refresh both.</description>
    <inlineHelpText>FY25SR - This bypasses all validations present on SMS UI - Replacements and Refresh both.</inlineHelpText>
    <label>Disable Validations on SMS UI</label>
    <type>Checkbox</type>
</CustomField>