force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/DisableShipmentDetailEmailAlerts__c.field-meta.xml
<CustomField>
    <fullName>DisableShipmentDetailEmailAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Org level Control for Disabling Shipment Detail Email Alerts for OM &amp; Quote Related (Distributor &amp; CM)</description>
    <inlineHelpText>Org level Control for Disabling Shipment Detail Email Alerts for External Team</inlineHelpText>
    <label>Disable Shipment Detail Email Alerts</label>
    <type>Checkbox</type>
</CustomField>