force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Enable_Logs__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to disable debug logs</description>
    <label>Enable Logs</label>
    <type>Checkbox</type>
</CustomField>