force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/EnableAsyncCallToConvertQL__c.field-meta.xml
<CustomField>
    <fullName>EnableAsyncCallToConvertQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox enables the asynchronous call for the method that converts QL lines to CPQ dispose lines.</description>
    <label>EnableAsyncCallToConvertQL</label>
    <type>Checkbox</type>
</CustomField>