force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Follow_Existing_EntCreate_Process__c.field-meta.xml
<CustomField>
    <fullName>Follow_Existing_EntCreate_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LICM-77</description>
    <label>Follow Existing EntCreate Process</label>
    <type>Checkbox</type>
</CustomField>