force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Follow_Old_ContractOrders_Process__c.field-meta.xml
<CustomField>
    <fullName>Follow_Old_ContractOrders_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is used to toggle to the old or new ContractOrders batch process</inlineHelpText>
    <label>Follow Old ContractOrders Process</label>
    <type>Checkbox</type>
</CustomField>