force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Min_EndDate_to_Consider_for_RCDM_T_Ext__c.field-meta.xml
<CustomField>
    <fullName>Min_EndDate_to_Consider_for_RCDM_T_Ext__c</fullName>
    <label>Min EndDate to Consider for RCDM-T Ext</label>
    <type>Date</type>
</CustomField>