force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Order_Transaction_Control__c.field-meta.xml
<CustomField>
    <fullName>Order_Transaction_Control__c</fullName>
    <description>To allow partial or full commit</description>
    <inlineHelpText>Partial /Full Commit</inlineHelpText>
    <label>Order Transaction Control</label>
    <length>80</length>
    <type>Text</type>
</CustomField>