force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Order_Trigger_MaxLoop_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Trigger_MaxLoop_Count__c</fullName>
    <description>To specify the max number of recursion for order trigger execution</description>
    <label>Order Trigger MaxLoop Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>