force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/populateAssetonAfterEvent__c.field-meta.xml
<CustomField>
    <fullName>populateAssetonAfterEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CPQ22-106</description>
    <label>populateAssetonAfterEvent</label>
    <type>Checkbox</type>
</CustomField>