force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/RWD_Disable_GuidedSelling_Defaulting__c.field-meta.xml
<CustomField>
    <fullName>RWD_Disable_GuidedSelling_Defaulting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RWD Disable GuidedSelling Defaulting</label>
    <type>Checkbox</type>
</CustomField>