force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Trigger_Max_Loop_Count__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Max_Loop_Count__c</fullName>
    <defaultValue>3</defaultValue>
    <description>This field is used in TriggerManager class.</description>
    <label>Trigger Max Loop Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>