force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/TriggerMaxLoopCount__c.field-meta.xml
<CustomField>
    <fullName>TriggerMaxLoopCount__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Trigger Max Loop Count
Used inside trigger framework</description>
    <inlineHelpText>Trigger Max Loop Count</inlineHelpText>
    <label>TriggerMaxLoopCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>