force-app/main/default/objects/ShGl_DisableBusinessLogic__c/listViews/All_with_fields.listView-meta.xml
<ListView>
    <fullName>All_with_fields</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Disable_Lead_Validation_Rules__c</columns>
    <columns>Disable_Opportunity_Email_Alerts__c</columns>
    <columns>Disable_Opportunity_Triggers__c</columns>
    <columns>Disable_Opportunity_Validation_Rules__c</columns>
    <columns>Disable_Opportunity_Workflow_Rules__c</columns>
    <columns>Disable_SBQQ_QuoteLine_Triggers__c</columns>
    <columns>Disable_SBQQ_Quote_Triggers__c</columns>
    <columns>Disable_Task_Validation_Rules__c</columns>
    <columns>TriggerMaxLoopCount__c</columns>
    <columns>Trigger_Max_Loop_Count__c</columns>
    <columns>Disable_Lead_Triggers__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Disable_Event_Triggers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with fields</label>
</ListView>